@@ -1,6 +1,6 @@
 % File src/library/stats/man/sd.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2013 R Core Team
+% Copyright 1995-2015 R Core Team
 % Distributed under GPL 2 or later
 
 \name{sd}
@@ -17,7 +17,7 @@ sd(x, na.rm = FALSE)
 }
 \arguments{
   \item{x}{a numeric vector or an \R object which is coercible to one
-    by \code{as.vector(x, "numeric")}.}
+    by \code{as.double(x)}.}
   \item{na.rm}{logical.  Should missing values be removed?}
 }
 \details{
